--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
+    "@types/node": "^18.16.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
