Update typescript, deploy in google run

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,21 @@
 # Use a Node base image
 FROM node
 
+ARG CLOUDINARY_CLOUD_NAME
+ENV CLOUDINARY_CLOUD_NAME=$CLOUDINARY_CLOUD_NAME
+
+ARG CLOUDINARY_API_KEY
+ENV CLOUDINARY_API_KEY=$CLOUDINARY_API_KEY
+
+ARG CLOUDINARY_API_SECRET
+ENV CLOUDINARY_API_SECRET=$CLOUDINARY_API_SECRET
+
+ARG OPENAI_API_KEY
+ENV OPENAI_API_KEY=$OPENAI_API_KEY
+
+ARG MONGODB_URL
+ENV MONGODB_URL=$MONGODB_URL
+
 # Set working directory
 WORKDIR /server
 
