--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,12 @@
 # Use a Node base image
 FROM node
 
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
+ARG VITE_HUGGINGFACE_KEY
+ENV VITE_HUGGINGFACE_KEY=$VITE_HUGGINGFACE_KEY
+
 # Set working directory
 WORKDIR /client
 
