--- a/client/package.json
+++ b/client/package.json
@@ -6,16 +6,22 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "mocha tests --recursive"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query": "^4.32.1",
+    "@tanstack/react-query-devtools": "^4.32.1",
+    "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "selenium-webdriver": "^4.10.0"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
@@ -32,6 +38,7 @@
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.0",
+    "mocha": "^10.2.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "^5.1.6",
